ghc-4335c07/testsuite/tests/patsyn/should_compile/export.hs
{-# LANGUAGE PatternSynonyms #-}
module ShouldCompile (pattern Single) where

pattern Single x <- [x]
