ghc-4335c07/testsuite/tests/patsyn/should_fail/T10426.hs
{-# LANGUAGE PatternSynonyms, ViewPatterns, EmptyCase #-}

pattern Id <- (id -> _) where
